--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include LICENSE
 include README.md
 
 recursive-include tests *
+recursive-include extra *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
